--- a/src/app/pages/dte/spin-the-wheel/edit/spin-the-wheel-edit.component.scss
+++ b/src/app/pages/dte/spin-the-wheel/edit/spin-the-wheel-edit.component.scss
@@ -45,3 +45,32 @@
   background-image: linear-gradient(315deg, #f65b5b 0%, #ff0000 74%);
   height: 50%;
 }
+
+.table-tier {
+  overflow-x: auto;
+
+  table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    margin-top: 24px;
+  }
+
+  th {
+    text-align: left;
+  }
+
+  th, td {
+    padding-right: 16px;
+    white-space: nowrap;
+  }
+
+  td.table-sum {
+    padding-top: 24px;
+    padding-bottom: 24px;
+    border-top: 2px solid #e3e3e3;
+  }
+
+  td {
+    padding-left: 4px;
+  }
+}
