--- a/src/app/pages/tactical-retail-sales/trs-proposal/component/trs-proposal-kecamatan.component.html
+++ b/src/app/pages/tactical-retail-sales/trs-proposal/component/trs-proposal-kecamatan.component.html
@@ -12,7 +12,7 @@
     <!-- / CLOSE DIALOG BUTTON -->
   </mat-toolbar>
 
-  <div mat-dialog-content class="p-24 m-0" fusePerfectScrollbar>
+  <div mat-dialog-content class="p-24 m-0" fusePerfectScrollbar  style="position: relative;">
 
     <div fxLayout="row wrap" fxLayout.lt-md="column" class="px-24 pt-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
       <mat-form-field fxFlex="30%" class="dropdown is-light form-primary">
@@ -33,11 +33,11 @@
     <form autocomplete="off" [formGroup]="formExecutor" class="responsive">
       <input formControlName="test">
 
-      <div *ngIf="loaded">
+      <div *ngIf="loaded" style="padding-bottom: 40px;">
         <ngx-datatable class="material" [rows]="rows" [loadingIndicator]="loadingIndicator" [columnMode]="'force'"
         [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true" [externalSorting]="false"
         [selectAllRowsOnPage]="false" [selected]="selected" [selectionType]="'checkbox'" [rowIdentity]="getId" (select)="onSelect($event)"
-        >
+        style="position: unset; display: unset;">
         <ngx-datatable-column [width]="68" [canAutoResize]="false" [sortable]="false">
           <ng-template ngx-datatable-header-template>
           </ng-template>
