--- a/src/app/pages/tactical-retail-sales/trs-proposal/create/trs-proposal-create.component.html
+++ b/src/app/pages/tactical-retail-sales/trs-proposal/create/trs-proposal-create.component.html
@@ -19,7 +19,7 @@
                 <div [formGroupName]="i">
                   <div class="mt-8 px-24" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
                     <mat-form-field fxFlex="90%" class="is-light form-primary">
-                      <mat-select placeholder="{{'global.area.area' | translate}}" formControlName="area"
+                      <mat-select placeholder="Area" formControlName="area"
                         matTooltip="{{getToolTipData(wil.get('area').value, wil.controls['list_area'].value)}}"
                         (selectionChange)="generataList('salespoint', wil.get('area').value, i, 'selection')">
                         <mat-option *ngFor="let item of wil.controls['list_area'].value" [value]="item.id">
@@ -28,13 +28,13 @@
                       </mat-select>
                       <mat-error
                         *ngIf="wil.controls['area'].hasError('required') && wil.controls['area'].touched">
-                        {{'global.area.area' | translate}} {{ ls.locale.global.messages.mandatory_text }}
+                        Area wajib diisi
                       </mat-error>
                     </mat-form-field>
                   </div>
                   <div class="mt-8 px-24" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
                     <mat-form-field fxFlex="90%" class="is-light form-primary">
-                      <mat-select placeholder="{{'global.area.salespoint' | translate}}" formControlName="salespoint"
+                      <mat-select placeholder="Salespoint" formControlName="salespoint"
                         matTooltip="{{getToolTipData(wil.get('salespoint').value, wil.controls['list_salespoint'].value)}}"
                         (selectionChange)="generataList('district', wil.get('salespoint').value, i, 'selection')">
                         <mat-option *ngFor="let item of wil.controls['list_salespoint'].value" [value]="item.id">
@@ -42,7 +42,7 @@
                       </mat-select>
                       <mat-error
                         *ngIf="wil.controls['salespoint'].hasError('required') && wil.controls['salespoint'].touched">
-                        {{'global.area.salespoint' | translate}} {{ ls.locale.global.messages.mandatory_text }}
+                        Salespoint wajib diisi
                       </mat-error>
                     </mat-form-field>
                   </div>
